Добавил возможность использовать кнопки без javascript (переход на отдельную страницу

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -90,7 +90,7 @@
     <section class="content__products products">
       <ul class="products__list">
         <li class="products__item product">
-          <a class="product__link" href="#">
+          <a class="product__link" href="rabbit.html" target="new_blank">
             <picture>
               <source type="image/webp" srcset="img/webp/catalog/photo-1-desktop.webp, img/webp/catalog/photo-1-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source type="image/webp" srcset="img/webp/catalog/photo-1-tablet.webp, img/webp/catalog/photo-1-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -103,20 +103,22 @@
           </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <a class="product__name product__name--toy" href="#">Зайчик-попрыгайчик</a>
+              <a class="product__name product__name--toy" href="order-rabbit.html" target="new_blank">Зайчик-попрыгайчик</a>
               <p class="product__info">Рост 30 см, вес 200 г</p>
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">1 200 руб.</p>
-              <svg class="product__cart-icon" width="21" height="18">
-                <use xlink:href="img/sprite.svg#cart"></use>
-              </svg>
+              <a class="produc__order-link" href="order-rabbit.html" target="new_blank">
+                <svg class="product__cart-icon" width="21" height="18">
+                  <use xlink:href="img/sprite.svg#cart"></use>
+                </svg>
+              </a>
             </div>
           </div>
         </li>
 
         <li class="products__item product">
-          <a class="product__link" href="#">
+          <a class="product__link" href="cart.html" target="new_blank">
             <picture>
               <source type="image/webp" srcset="img/webp/catalog/photo-2-desktop.webp, img/webp/catalog/photo-2-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source type="image/webp" srcset="img/webp/catalog/photo-2-tablet.webp, img/webp/catalog/photo-2-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -129,20 +131,22 @@
           </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <a class="product__name product__name--basket" href="#">Корзинка для белья</a>
+              <a class="product__name product__name--basket" href="cart.html" target="new_blank">Корзинка для белья</a>
               <p class="product__info">Диаметр 15 см, высота 10 см</p>
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">690 руб.</p>
-              <svg class="product__cart-icon" width="21" height="18">
-                <use xlink:href="img/sprite.svg#cart"></use>
-              </svg>
+              <a class="produc__order-link" href="order-cart.html" target="new_blank">
+                <svg class="product__cart-icon" width="21" height="18">
+                  <use xlink:href="img/sprite.svg#cart"></use>
+                </svg>
+              </a>
             </div>
           </div>
         </li>
 
         <li class="products__item product">
-          <a class="product__link" href="#">
+          <a class="product__link" href="big-cart.html" target="new_blank">
             <picture>
               <source type="image/webp" srcset="img/webp/catalog/photo-3-desktop.webp, img/webp/catalog/photo-3-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source type="image/webp" srcset="img/webp/catalog/photo-3-tablet.webp, img/webp/catalog/photo-3-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -155,14 +159,16 @@
           </a>
           <div class="product__desc">
             <div class="product__info-wrapper">
-              <a class="product__name" href="#">Большая корзинка<br> для игрушек</a>
+              <a class="product__name" href="big-cart.html" target="new_blank">Большая корзинка<br> для игрушек</a>
               <p class="product__info">Диаметр 30 см, высота 30 см</p>
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">1 500 руб.</p>
-              <svg class="product__cart-icon" width="21" height="18">
-                <use xlink:href="img/sprite.svg#cart"></use>
-              </svg>
+              <a class="produc__order-link" href="order-big-cart.html" target="new_blank">
+                <svg class="product__cart-icon" width="21" height="18">
+                  <use xlink:href="img/sprite.svg#cart"></use>
+                </svg>
+              </a>
             </div>
           </div>
         </li>
@@ -181,7 +187,7 @@
       <div class="creation__desc-wrapper">
         <p class="creation__desc">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как
           появляются наши товары.</p>
-        <button class="creation__button button button--catalog">Сделать заказ</button>
+        <a class="creation__button button button--catalog" href="order.html" target="new_blank">Сделать заказ</a>
       </div>
     </section>
   </main>
@@ -252,7 +258,7 @@
       </div>
     </div>
   </footer>
-  <script src="scripts/mobile-menu.js"></script>
-  <script src="scripts/modal_catalog.js"></script>
+  <!-- <script src="scripts/mobile-menu.js"></script>
+  <script src="scripts/modal_catalog.js"></script> -->
 </body>
 </html>
