--- a/source/form.html
+++ b/source/form.html
@@ -82,8 +82,8 @@
       </ul>
     </nav>
     <button class="header__button header__button--menu-closed"></button>
-    <div class="content__title-wrapper">
-      <h1 class="content__title">Вязание на заказ</h1>
+    <div class="header__title-wrapper">
+      <h1 class="header__title">Вязание на заказ</h1>
     </div>
   </header>
   <main class="page__content content">
