--- a/source/index.html
+++ b/source/index.html
@@ -156,7 +156,7 @@
               srcset="img/index/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Три вязанных корзинки">
           </picture>
           <p class="main-product__price">Цена: 990 руб.</p>
-          <button class="main-product__button button">ЗАКАЗАТЬ</button>
+          <a class="main-product__button button" href="oreder-cart.html" target="new_blank">ЗАКАЗАТЬ</a>
         </div>
       </div>
     </section>
@@ -231,7 +231,7 @@
             </button>
           </div>
         </div>
-        <a class="reviews__button button" href="#">Написать</a>
+        <a class="reviews__button button" href="review.html" target="_blank">Написать</a>
       </div>
     </section>
 
@@ -265,7 +265,7 @@
           width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <a class="contacts__button button" href="#">Напишите нам</a>
+      <a class="contacts__button button" href="feedback.html" target="new_blank">Напишите нам</a>
     </section>
   </main>
 
@@ -337,6 +337,7 @@
   </footer>
   <script src="scripts/mobile-menu.js"></script>
   <script src="scripts/modal_index.js"></script>
+  </script>
 </body>
 
 </html>
