--- a/source/index.html
+++ b/source/index.html
@@ -259,12 +259,7 @@
           </div>
         </div>
       </div>
-      <div class="contacts__map">
-        <iframe class="contacts__iframe"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsINCg0L7RgdGB0LjRjywgMTkxMTg2!5e0!3m2!1sru!2sby!4v1651060409102!5m2!1sru!2sby"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+      <div class="contacts__map" id="map"></div>
       <a class="contacts__button button" href="feedback.html" target="new_blank">Напишите нам</a>
     </section>
   </main>
@@ -337,7 +332,8 @@
   </footer>
   <script src="scripts/mobile-menu.js"></script>
   <script src="scripts/modal_index.js"></script>
-  </script>
+  <script src="scripts/map.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY3phy8g5xuklbeNO-3ybqbkP8gF14MqM&callback=initMap&v=weekly" defer></script>
 </body>
 
 </html>
