Добавил активное состояние интерактивным элементам при нажатии с клавиатуры или фокусе

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -108,7 +108,7 @@
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">1 200 руб.</p>
-              <a class="produc__order-link" href="order-rabbit.html" target="new_blank">
+              <a class="produc__order-link" href="order-rabbit.html" target="new_blank"  aria-label="Добавить в корзину">
                 <svg class="product__cart-icon" width="21" height="18">
                   <use xlink:href="img/sprite.svg#cart"></use>
                 </svg>
@@ -136,7 +136,7 @@
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">690 руб.</p>
-              <a class="produc__order-link" href="order-cart.html" target="new_blank">
+              <a class="produc__order-link" href="order-cart.html" target="new_blank" aria-label="Добавить в корзину">
                 <svg class="product__cart-icon" width="21" height="18">
                   <use xlink:href="img/sprite.svg#cart"></use>
                 </svg>
@@ -164,7 +164,7 @@
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">1 500 руб.</p>
-              <a class="produc__order-link" href="order-big-cart.html" target="new_blank">
+              <a class="produc__order-link" href="order-big-cart.html" target="new_blank"  aria-label="Добавить в корзину">
                 <svg class="product__cart-icon" width="21" height="18">
                   <use xlink:href="img/sprite.svg#cart"></use>
                 </svg>
@@ -181,7 +181,7 @@
       </div>
       <div class="creation__video">
         <button class="creation__video-button">
-          <img class="creation__video-icon" src="img/catalog/play.svg" width="101" height="77" alt="Кнопка play">
+          <img class="creation__video-icon" src="img/catalog/play.svg" width="101" height="77" alt="Воспроизвести видео">
         </button>
       </div>
       <div class="creation__desc-wrapper">
@@ -251,7 +251,7 @@
       <div class="footer__copyright copyright ">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <p class="copyright__desc">Разработано</p>
-          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
+          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="HTML Академия">
             <use xlink:href="img/sprite.svg#academy"></use>
           </svg>
         </a>
