--- a/source/form.html
+++ b/source/form.html
@@ -264,7 +264,7 @@
       <div class="footer__copyright copyright ">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <p class="copyright__desc">Разработано</p>
-          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
+          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="HTML Академия">
             <use xlink:href="img/sprite.svg#academy"></use>
           </svg>
         </a>
