Дописал стили для корректного отображения при переполнении вёрстки контентом

--- a/source/index.html
+++ b/source/index.html
@@ -224,14 +224,14 @@
           </article>
           <div class="slider__controls">
             <button class="slider__button slider__button--backward">
-              <img class="slider__button-icon" src="img/huge-arrow-left.svg" width="50" height="26" alt="Назад">
+              <img class="slider__button-icon" src="img/huge-arrow-left.svg" width="50" height="26" alt="Предыдущий отзыв">
             </button>
             <button class="slider__button slider__button--forward">
-              <img class="slider__button-icon" src="img/huge-arrow-right.svg" width="50" height="26" alt="Вперёд">
+              <img class="slider__button-icon" src="img/huge-arrow-right.svg" width="50" height="26" alt="Следующий отзыв">
             </button>
           </div>
         </div>
-        <a class="reviews__button button" href="review.html" target="_blank">Написать</a>
+        <a class="reviews__button button" href="review.html" target="_blank" aria-label="Написать отзыв">Написать</a>
       </div>
     </section>
 
