Поправил отступы для соответствия с макетом

--- a/source/index.html
+++ b/source/index.html
@@ -332,8 +332,8 @@
   </footer>
   <script src="scripts/mobile-menu.js"></script>
   <script src="scripts/modal_index.js"></script>
-  <script src="scripts/map.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY3phy8g5xuklbeNO-3ybqbkP8gF14MqM&callback=initMap&v=weekly" defer></script>
+  <!-- <script src="scripts/map.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY3phy8g5xuklbeNO-3ybqbkP8gF14MqM&callback=initMap&v=weekly" defer></script> -->
 </body>
 
 </html>
